<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.nitsarut.mymap.LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">


            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="400dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/suppalod" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">




                <EditText
                    android:id="@+id/etUsername"
                    style="@style/edittext_style"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/Username"
                    android:inputType="textPersonName"
                    android:paddingLeft="8dp" />


                <EditText
                    android:id="@+id/etPassword"
                    style="@style/edittext_style"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp" />

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btnLogin"
                   style="@style/button_style"
                    android:layout_marginTop="10dp"
                    android:text="@string/login"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/lRegister"
                    style="@style/button1_style"
                    android:layout_marginTop="5dp"
                    android:text="@string/Register"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/forgetpass"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/repass"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="gone"
                    android:textSize="16sp"/>



            </LinearLayout>



        </LinearLayout>


    </LinearLayout>





</LinearLayout>
