<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/jpg123"
            android:layout_width="380dp"
            android:layout_height="340dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="30dp"
            android:text="@string/image" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                tools:context="com.example.nitsarut.mymap.MapsActivity" />

            <TextView
                android:id="@+id/txta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="40"
                android:gravity="center"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtdescription1"
                style="@style/map_style"
                android:layout_gravity="center_horizontal"
                android:hint="@string/txtbox1"
                android:inputType="text"
                android:textSize="16sp"
              />





        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <TextView
                android:id="@+id/txtSent2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="250dp"
                android:layout_toRightOf="@id/txtCancel"
                android:ems="100"
                android:onClick="upLoad"
                android:text="@string/txtsent"
                android:textColor="#0000cd	"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="5dp"
                android:onClick="cancle"
                android:text="@string/cancle"
                android:textColor="#0000cd"
                android:textSize="20sp" />


        </RelativeLayout>

    </LinearLayout>




</RelativeLayout>