<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nitsarut.mymap.Sentimage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardviewsent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/sent_Relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/take_imv"
                    android:layout_width="400dp"
                    android:layout_height="500dp"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imv"/>


                <TextView
                    android:id="@+id/sent_imv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/take_imv"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="310dp"
                    android:layout_marginStart="310dp"
                    android:text="@string/send"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/sent_cle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/cancle1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
